# sensortag

./: Cargo.toml  README.md  memory.x
.cargo/: config
jtag/: gdbinit  openocd.cfg
src/: main.rs
